@@ -35,7 +35,8 @@ TODO Add Cuddle play type
 - Universal solvent now rescues Encased Adventurers (if you choose to use it for such)
 - Universal solvent now removes encased debuffs from NPCs and grants glue resist to NPC/player for 30 turns
 - Being hit by an Observer's beam now attracts the Shadow to your position
-
+- The shadow now properly applies a cursed item when she catches you
+- Calling a guard should now pick an eligible character on the map instead of spawning one
 
 5.4.3
 - No longer need to pass room escape method to backtrack
